feat: Hydra 0.13.x support